réorganisation des dossiers de tests + AuraRepositoryTest mis à jour